--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Story</title>
     <meta name="viewport"
         content="width=device-width,minimum-scale=1,initial-scale=1">
-    <link rel="canonical" href="helloworld.html">
+    <link rel="canonical" href="example.com">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
       body {
@@ -17,25 +17,27 @@
       amp-story-page {
         background: white;
       }
-      h3 {
-        color: #fff;
+      h1 {
+        color: red;
         font-weight: normal;
         line-height: 1.174;
         text-transform: uppercase;
+      }
+      amp-img {
+        object-fit: cover;
       }
     </style>
   </head>
 
   <body>
-    <amp-story standalone bookend-config-src="bookend.json">
-
+    <amp-story standalone>
       <amp-story-page id="victorian">
           <amp-story-grid-layer template="fill">
-              <amp-img src="/static/img/victorian.jpg" layout="fill">
+              <amp-img src="./static/img/victorian.jpg" layout="fill">
               </amp-img>
           </amp-story-grid-layer>
           <amp-story-grid-layer template="vertical">
-            <h3>Hello, amp-story!</h3>
+            <h1>Hello, amp-story!</h1>
           </amp-story-grid-layer>
       </amp-story-page>
     </amp-story>
