--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <script async custom-element="amp-story"
-        src="https://cdn.ampproject.org/v0/amp-story-0.1.js"></script>
+    <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-0.1.js"></script>
+    <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
     <title>My Story</title>
     <meta name="viewport"
         content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -17,14 +17,43 @@
       amp-story-page {
         background: white;
       }
+      h1, h2, h3 {
+        color: white;
+      }
       h1 {
-        color: red;
-        font-weight: normal;
-        line-height: 1.174;
+        font-weight: bold;
+        font-size: 60px;
+      }
+      h2 {
+        font-size: 40px;
+      }
+      .bottom {
+        align-content: flex-end;
+      }
+      .center {
+        align-content: center;
+      }
+      .tagline {
+        background-color: white;
+        text-transform: uppercase;
+        font-weight: bold;
+        padding: 5px 10px;
+      }
+      .title {
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 15px;
+      }
+      .byline {
+        color: white;
+        font-weight: bold;
         text-transform: uppercase;
       }
-      amp-img {
-        object-fit: cover;
+      .darken {
+        background-color: black;
+        opacity: 0.6;
+      }
+      .blur img{
+        filter:blur(5px)
       }
     </style>
   </head>
@@ -33,11 +62,105 @@
     <amp-story standalone>
       <amp-story-page id="victorian">
           <amp-story-grid-layer template="fill">
-              <amp-img src="./static/img/victorian.jpg" layout="fill">
-              </amp-img>
+            <amp-img src="./static/img/victorian.jpg" layout="fill"></amp-img>
           </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical">
-            <h1>Hello, amp-story!</h1>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <p>
+              <span class="tagline">Cool</span>
+            </p>
+            <h1 class="title">Welcome to San Francisco</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="victorian-2">
+          <amp-story-grid-layer template="fill" class="darken blur">
+              <amp-img src="./static/img/victorian.jpg" layout="fill" class="darken"></amp-img>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="center">
+            <h3>
+              Ellentesque accumsan vel lectus in suscipit. Nullam et hendrerit risus. Integer ultrices luctus nisi. Mauris ut leo sed leo mattis tempus. Aenean in est et sapien efficitur finibus. Sed et lorem dolor. Morbi imperdiet erat commodo, elementum sem in, dignissim felis. Quisque facilisis commodo turpis, tempor rutrum augue egestas quis. Sed et nulla et quam semper facilisis. Mauris finibus, tortor id rhoncus lacinia, nunc ex luctus erat, id fermentum nisi erat quis arcu. Praesent eget pretium purus.
+            </h3>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="dolores" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/dolores.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">Dolores Park</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="lombard" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/lombard.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">Lombard Street</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="ferry-sunset" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/ferry-sunset.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">The Ferry Building</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="fog" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/fog.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">Lots of fog</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="seals" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/seals.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">Seals</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="bridge" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/bridge.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">Golden Gate Bridge</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="guitar" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/guitar.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">Home Of The Greatful Dead</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="street" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/street.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">Vibrant Streets</h1>
+          </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="trolley" auto-advance-after="3s">
+          <amp-story-grid-layer template="fill">
+              <amp-video src="./static/mp4/trolley.mp4" layout="fill"></amp-video>
+          </amp-story-grid-layer>
+          <amp-story-grid-layer template="vertical" class="bottom">
+            <h2 class="title">And of course, trolleys</h1>
           </amp-story-grid-layer>
       </amp-story-page>
     </amp-story>
