--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <amp-video src="./static/mp4/fog.mp4" layout="fill"></amp-video>
           </amp-story-grid-layer>
           <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Lots of fog</h1>
+            <h2 class="title">Fog</h1>
           </amp-story-grid-layer>
       </amp-story-page>
 
@@ -142,7 +142,7 @@
               <amp-video src="./static/mp4/guitar.mp4" layout="fill"></amp-video>
           </amp-story-grid-layer>
           <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Home Of The Greatful Dead</h1>
+            <h2 class="title">Greatful Dead</h1>
           </amp-story-grid-layer>
       </amp-story-page>
 
@@ -151,7 +151,7 @@
               <amp-video src="./static/mp4/street.mp4" layout="fill"></amp-video>
           </amp-story-grid-layer>
           <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Vibrant Streets</h1>
+            <h2 class="title">Streets</h1>
           </amp-story-grid-layer>
       </amp-story-page>
 
@@ -160,7 +160,7 @@
               <amp-video src="./static/mp4/trolley.mp4" layout="fill"></amp-video>
           </amp-story-grid-layer>
           <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">And of course, trolleys</h1>
+            <h2 class="title">Trolleys</h1>
           </amp-story-grid-layer>
       </amp-story-page>
     </amp-story>
