--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-0.1.js"></script>
     <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
+    <script async custom-element="amp-story-auto-ads" src="https://cdn.ampproject.org/v0/amp-story-auto-ads-0.1.js"></script>
     <title>My Story</title>
     <meta name="viewport"
         content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -26,6 +27,7 @@
       }
       h2 {
         font-size: 40px;
+        text-align: center;
       }
       .bottom {
         align-content: flex-end;
