--- a/index.html
+++ b/index.html
@@ -61,110 +61,129 @@
   </head>
 
   <body>
-    <amp-story standalone>
-      <amp-story-page id="victorian">
-          <amp-story-grid-layer template="fill">
-            <amp-img src="./static/img/victorian.jpg" layout="fill"></amp-img>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <p>
-              <span class="tagline">Cool</span>
-            </p>
-            <h1 class="title">Welcome to San Francisco</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+  <amp-story standalone>
+    <amp-story-auto-ads>
+      {
+        "ad-attributes": {
+          "type": "custom",
+          "data-url": "./ad-server-response.json"
+        }
+      }
 
-      <amp-story-page id="victorian-2">
-          <amp-story-grid-layer template="fill" class="darken blur">
-              <amp-img src="./static/img/victorian.jpg" layout="fill" class="darken"></amp-img>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="center">
-            <h3>
-              Ellentesque accumsan vel lectus in suscipit. Nullam et hendrerit risus. Integer ultrices luctus nisi. Mauris ut leo sed leo mattis tempus. Aenean in est et sapien efficitur finibus. Sed et lorem dolor. Morbi imperdiet erat commodo, elementum sem in, dignissim felis. Quisque facilisis commodo turpis, tempor rutrum augue egestas quis. Sed et nulla et quam semper facilisis. Mauris finibus, tortor id rhoncus lacinia, nunc ex luctus erat, id fermentum nisi erat quis arcu. Praesent eget pretium purus.
-            </h3>
-          </amp-story-grid-layer>
-      </amp-story-page>
+      <template type="amp-mustache" id="template-1">
+        <amp-img class="fill-img" layout="fill" src="{{imgSrc}}"></amp-img>
+        <!-- <amp-pixel src="{{impressionUrl}}"></amp-pixel> -->
+      </template>
 
-      <amp-story-page id="dolores" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/dolores.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Dolores Park</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+    </amp-story-auto-ads>
 
-      <amp-story-page id="lombard" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/lombard.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Lombard Street</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="victorian">
+      <amp-story-grid-layer template="fill">
+        <amp-img src="./static/img/victorian.jpg" layout="fill"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <p>
+          <span class="tagline">Cool</span>
+        </p>
+        <h1 class="title">Welcome to San Francisco</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="ferry-sunset" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/ferry-sunset.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">The Ferry Building</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="victorian-2">
+      <amp-story-grid-layer template="fill" class="darken blur">
+        <amp-img src="./static/img/victorian.jpg" layout="fill" class="darken"></amp-img>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="center">
+        <h3>
+          Ellentesque accumsan vel lectus in suscipit. Nullam et hendrerit risus. Integer ultrices luctus nisi. Mauris ut leo sed leo
+          mattis tempus. Aenean in est et sapien efficitur finibus. Sed et lorem dolor. Morbi imperdiet erat commodo, elementum
+          sem in, dignissim felis. Quisque facilisis commodo turpis, tempor rutrum augue egestas quis. Sed et nulla et quam
+          semper facilisis. Mauris finibus, tortor id rhoncus lacinia, nunc ex luctus erat, id fermentum nisi erat quis arcu.
+          Praesent eget pretium purus.
+        </h3>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="fog" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/fog.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Fog</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="dolores" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/dolores.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">Dolores Park</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="seals" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/seals.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Seals</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="lombard" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/lombard.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">Lombard Street</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="bridge" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/bridge.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Golden Gate Bridge</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="ferry-sunset" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/ferry-sunset.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">The Ferry Building</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="guitar" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/guitar.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Greatful Dead</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="fog" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/fog.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">Fog</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="street" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/street.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Streets</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
+    <amp-story-page id="seals" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/seals.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">Seals</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
-      <amp-story-page id="trolley" auto-advance-after="3s">
-          <amp-story-grid-layer template="fill">
-              <amp-video src="./static/mp4/trolley.mp4" layout="fill"></amp-video>
-          </amp-story-grid-layer>
-          <amp-story-grid-layer template="vertical" class="bottom">
-            <h2 class="title">Trolleys</h1>
-          </amp-story-grid-layer>
-      </amp-story-page>
-    </amp-story>
+    <amp-story-page id="bridge" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/bridge.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">Golden Gate Bridge</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
+
+    <amp-story-page id="guitar" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/guitar.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">Greatful Dead</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
+
+    <amp-story-page id="street" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/street.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">Streets</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
+
+    <amp-story-page id="trolley" auto-advance-after="3s">
+      <amp-story-grid-layer template="fill">
+        <amp-video src="./static/mp4/trolley.mp4" layout="fill"></amp-video>
+      </amp-story-grid-layer>
+      <amp-story-grid-layer template="vertical" class="bottom">
+        <h2 class="title">Trolleys</h1>
+      </amp-story-grid-layer>
+    </amp-story-page>
+  </amp-story>
   </body>
 </html>
